--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListForms.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListForms.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-             mc:Ignorable="d" 
-                d:DesignHeight="550" d:DesignWidth="300">
+             mc:Ignorable="d" Background="LightGray" FontSize="18"
+             d:DesignHeight="550" d:DesignWidth="400">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -31,19 +31,28 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Margin="5,10" Text="{Binding Path=FormListHeader, Mode=TwoWay}" FontSize="14"
+        <TextBlock Text="{Binding Path=FormListHeader, Mode=TwoWay}" FontSize="24"
+                   Foreground="#47687c" HorizontalAlignment="Center" Margin="-10,5,5,5"
                    Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8"/>
+
         <ScrollViewer Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="8" Grid.RowSpan="8"
                       VerticalScrollBarVisibility="Auto" MaxHeight="350">
             <StackPanel>
-                <TextBlock x:Name="behaviorForms" Text="Daily Behavior Tracking Forms" Margin="5,10,0,0" FontSize="14"/>
-                <ListBox x:Name="formList" Width="350"  ItemsSource="{Binding Forms}"
-                 BorderThickness="0" Margin="0,5,0,10" MouseUp="formList_MouseUp">
-            </ListBox>
-                <TextBlock x:Name="otherForms" Text="Other Forms" Margin="5,30,0,0" FontSize="14"/>
-                <ListBox x:Name="otherFormsList" Width="350"  ItemsSource="{Binding OtherForms}"
-                 BorderThickness="0" Margin="0,5,0,10" MouseUp="otherFormsList_MouseUp">
-            </ListBox>
+                <TextBlock x:Name="behaviorForms" Text="Daily Behavior Tracking Forms" Margin="5,10,0,0" FontSize="18"/>
+                <ListBox x:Name="formList" ItemsSource="{Binding Forms}"
+                 BorderThickness="2" Margin="10,5" MouseUp="formList_MouseUp" Background="#9dd4c5">
+                </ListBox>
+                
+                <TextBlock x:Name="noForms" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="8" Grid.RowSpan="2" 
+                   Text="All Daily Forms Complete" FontSize="14" Margin="10,0" Visibility="Collapsed"/>
+                
+                <TextBlock x:Name="otherForms" Text="Other Forms" Margin="5,30,0,0" FontSize="18"/>
+                <ListBox x:Name="otherFormsList" ItemsSource="{Binding OtherForms}"
+                 BorderThickness="2" Margin="10,5" MouseUp="otherFormsList_MouseUp" Background="#9dd4c5">
+                </ListBox>
+                
+                <TextBlock x:Name="noOtherForms" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="8" Grid.RowSpan="2" 
+                   Text="No Other Forms" FontSize="14" Margin="10,0" Visibility="Collapsed"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
