--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/PasswordRecovery.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/PasswordRecovery.xaml
@@ -5,16 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
         mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-        Title="Password Recovery" d:DesignHeight="450" d:DesignWidth="600">
-    <Grid>
-        <StackPanel x:Name="changePassword" Visibility="Collapsed" 
-                   Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8" Grid.RowSpan="10">
-            <local:ChangePassword x:Name="changePasswordUC"></local:ChangePassword>
-        </StackPanel>
+        Title="Password Recovery" d:DesignHeight="450" d:DesignWidth="600"
+        SizeChanged="Window_SizeChanged" Background="#bdf0bc">
 
-        <StackPanel x:Name="resetPassword" Visibility="Collapsed" 
-                   Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8" Grid.RowSpan="10">
-            <local:ResetPassword x:Name="resetPasswordUC"></local:ResetPassword>
-        </StackPanel>
-    </Grid>
+    <Window.Resources>
+        <Style TargetType="TextBox">
+            <Setter Property="Background" Value="#f7f7f7" />
+            <Setter Property="Foreground" Value="#123454"/>
+        </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="Background" Value="#f7f7f7" />
+            <Setter Property="Foreground" Value="#123454"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#00699b" />
+            <Setter Property="FontWeight" Value="Heavy" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#f7f7f7" />
+            <Setter Property="Foreground" Value="#123454"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="#00699b" BorderThickness="1">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#9dd4c5"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
+    <Border BorderBrush="#00699b" BorderThickness="60">
+        <Border BorderBrush="Black" BorderThickness="2">
+            <Grid>
+                <ScrollViewer x:Name="MyScrollViewer" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8" Grid.RowSpan="10">
+                    <StackPanel>
+                        <StackPanel x:Name="changePassword" Visibility="Collapsed">
+                            <local:ChangePassword x:Name="changePasswordUC"></local:ChangePassword>
+                        </StackPanel>
+
+                        <StackPanel x:Name="resetPassword" Visibility="Collapsed" >
+                            <local:ResetPassword x:Name="resetPasswordUC"></local:ResetPassword>
+                        </StackPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
