--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ResetPassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ResetPassword.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
         Height="475" Width="525">
-    
-     <Grid>
+
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
             <ColumnDefinition Width="auto" />
@@ -30,43 +30,45 @@
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="6" 
-                   Margin="0,0,10,10" FontSize="36" Text="Reset Password" />
-        <TextBlock Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="6" 
-                   Margin="0,0,10,10" FontSize="20" Text="Enter email to recieve code to reset password." />
+        <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="7">
+            <TextBlock Margin="0,30,10,0" FontSize="42" Text="Reset Password"
+                   FontStyle="Italic" TextAlignment="Center"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="3"
-                    Margin="5" TextAlignment="Right" Padding="5" Text="Email:" />
-        <TextBox x:Name="forgotEmailText" Grid.Column="2" Grid.Row="3"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
-                 TextChanged="forgotEmailText_TextChanged" Text="{ Binding Path=email, Mode=TwoWay }"/>
+            <TextBlock Margin="0,20,0,5" FontSize="20" TextAlignment="Center" Foreground="#47687c"
+                   Text="Enter email to recieve a code to reset password" />
 
-        <TextBlock x:Name="accessCodeVerify" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2"
-                    Margin="5" Padding="5" Text="Access Code Sent" 
-                    Foreground="ForestGreen" Visibility="Hidden"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock FontSize="16" TextAlignment="Right" Padding="5" Text="Email:" />
+                <TextBox x:Name="forgotEmailText" Width="270" TextChanged="forgotEmailText_TextChanged" 
+                 Text="{ Binding Path=email, Mode=TwoWay }"/>
+            </StackPanel>
 
-        <StackPanel Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5" 
-                    Orientation="Horizontal" Margin="0, 10">
-            <Button x:Name="sendButton"
+            <TextBlock x:Name="accessCodeVerify" Margin="5" Padding="5" Text="Access Code Sent" 
+                   FontSize="16" Foreground="#366f24" Visibility="Hidden" HorizontalAlignment="Center"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button x:Name="sendButton"
                 Width="175" Margin="10" Content="Send/Resend Code" 
                 Click="sendButton_Click" />
-            <Button x:Name="cancelButton" 
+                <Button x:Name="cancelButton" 
                 Width="175" Margin="10" Content="Cancel" 
                 Click="cancelButton_Click" />
-        </StackPanel>
+            </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="6"
-                    Margin="5" TextAlignment="Right" Padding="5" Text="Code:" />
-        <TextBox x:Name="codeText" Grid.Column="2" Grid.Row="6"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
-                 TextChanged="codeText_TextChanged" Text="{ Binding Path=code, Mode=TwoWay }"/>
+            <TextBlock Margin="0,30,0,5" FontSize="20" TextAlignment="Center" Foreground="#47687c"
+                   Text="Check email for reset password code" />
 
-        <TextBlock x:Name="incorrectAccessCode" Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="2"
-                    Margin="5" Padding="5" Text="Incorrect Access Code or Email" 
-                    Foreground="IndianRed" Visibility="Hidden"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock TextAlignment="Right" FontSize="16" Padding="5" Text="Code:" />
+                <TextBox x:Name="codeText" Width="270" TextChanged="codeText_TextChanged" 
+                     Text="{ Binding Path=code, Mode=TwoWay }"/>
+            </StackPanel>
+            <TextBlock x:Name="incorrectAccessCode" Margin="5" Padding="5" Text="Incorrect Access Code or Email" 
+                    FontSize="16" Foreground="IndianRed" Visibility="Hidden" HorizontalAlignment="Center"/>
 
-        <Button x:Name="submitButton" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="2"
-                Width="150" Margin="10" Content="Submit" 
+            <Button x:Name="submitButton" Grid.Column="1" Grid.Row="8" Grid.ColumnSpan="2"
+                Width="150" Content="Submit" HorizontalAlignment="Center" 
                 Click="submitButton_Click" />
+        </StackPanel>
     </Grid>
 </UserControl>
