--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/AdminDash.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/AdminDash.xaml
@@ -4,82 +4,81 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-             mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
-             d:DesignHeight="550" d:DesignWidth="600">
+             mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
+             d:DesignHeight="650" d:DesignWidth="725" Background="#e1dede">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200" />
             <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="20" />
-                <RowDefinition Height="20" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+        </Grid.ColumnDefinitions>
 
-        <Button x:Name="logoutButton" Grid.Column="6" Grid.Row= "0" Grid.ColumnSpan="2" 
-                Content="Logout" HorizontalAlignment="Right" Margin="5,1" MaxHeight="30" MinWidth="60" Click="logoutButton_Click"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="100" />
+        </Grid.RowDefinitions>
 
-        <TextBlock x:Name="userNameText" Grid.Column="5" Grid.Row="1" Grid.ColumnSpan="3" 
-                   Text="Administrator" HorizontalAlignment="Right" Margin="3, 0"/>
-        <TextBlock x:Name="loginText" Grid.Column="5" Grid.Row="2" Grid.ColumnSpan="4"
-                Text="{Binding Path=LastAccess, Mode=TwoWay}" HorizontalAlignment="Right" Margin="3,0"/>
+        <StackPanel Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="4">
+            <Button x:Name="logoutButton" Content="Logout" HorizontalAlignment="Right" 
+                    Margin="10,15,10,5" Click="logoutButton_Click" Width="100" Height="40"/>
 
-        <TextBlock x:Name="menuHeaderText" Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="3" 
-                   Text="{Binding Path=MenuHeader, Mode=TwoWay}" FontSize="18" Margin="10,0"/>
-        <StackPanel Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="5" Orientation="Horizontal">
-        <TextBlock x:Name="teacherFName" HorizontalAlignment="Right"
-                Text="{Binding Path=Text1Text, Mode=TwoWay}" Margin="10,0,0,0"/>
-            <TextBox x:Name="teacherFNameText" HorizontalAlignment="Left" MinWidth="200" MaxHeight="20" 
-                     VerticalAlignment="Top" Text="{Binding Path=FirstNameText, Mode=TwoWay}"/>
+            <TextBlock x:Name="userNameText" Text="Administrator" HorizontalAlignment="Right" 
+                       Margin="10, 0" Foreground="Black"/>
+            <TextBlock x:Name="loginText" Text="{Binding Path=LastAccess, Mode=TwoWay}" HorizontalAlignment="Right" 
+                       Margin="10,0" Foreground="Black"/>
+
+            <TextBlock x:Name="menuHeaderText" Text="{Binding Path=MenuHeader, Mode=TwoWay}" 
+                       FontSize="42" FontStyle="Italic" HorizontalAlignment="Center" Margin="-150,50,0,50"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="-150,10,0,10">
+                <TextBlock x:Name="textBox1" HorizontalAlignment="Right"
+                Text="{Binding Path=Text1Text, Mode=TwoWay}"/>
+                <TextBox x:Name="textBox1Text" HorizontalAlignment="Left" Width="200"
+                         Text="{Binding Path=TextBox1Text, Mode=TwoWay}"/>
+            </StackPanel>
+            
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="-150,0,0,20">
+                <TextBlock x:Name="textBox2" HorizontalAlignment="Right"
+                 Text="{Binding Path=Text2Text, Mode=TwoWay}"/>
+                <TextBox x:Name="textBox2Text" HorizontalAlignment="Left" Width="200"
+                         Text="{Binding Path=TextBox2Text, Mode=TwoWay}"/>
+            </StackPanel>
+
+            <StackPanel HorizontalAlignment="Center" Margin="-150,0,0,0">
+                <TextBlock x:Name="invalidEntryMsg" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
+                Text="{Binding Path=ErrorMsg, Mode=TwoWay}" HorizontalAlignment="Center" Foreground="IndianRed"
+                   Visibility="Collapsed"/>
+                <TextBlock x:Name="confirmMsg" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
+                Text="{Binding Path=ConfirmMessage, Mode=TwoWay}" HorizontalAlignment="Center" Foreground="DarkGreen" FontSize="18"
+                   Visibility="Collapsed"/>
+                <TextBlock x:Name="validUpdateInfo" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
+                Text="Email Updated For All Accounts" HorizontalAlignment="Center" Foreground="DarkGreen"
+                   Visibility="Collapsed"/>
+            </StackPanel>
+
+            <Button x:Name="submitButton" Content="{Binding Path=SubmitButtonContent, Mode=TwoWay}" 
+                HorizontalAlignment="Center" Margin="-100,20, 40, 200" Width="120" Height="40" Click="submitButton_Click"/>
         </StackPanel>
-        <StackPanel Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="5" Orientation="Horizontal">
-        <TextBlock x:Name="teacherLName" HorizontalAlignment="Right"
-                 Text="{Binding Path=Text2Text, Mode=TwoWay}" Margin="10,0,0,0"/>
-            <TextBox x:Name="teacherLNameText" HorizontalAlignment="Left" MinWidth="200" MaxHeight="20" 
-                     VerticalAlignment="Top" Text="{Binding Path=LastNameText, Mode=TwoWay}"/>
-        </StackPanel>
 
-        <TextBlock x:Name="invalidEntryMsg" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
-                Text="{Binding Path=ErrorMsg, Mode=TwoWay}" Margin="100,0,0,0" Foreground="IndianRed"
-                   Visibility="Collapsed"/>
-        <TextBlock x:Name="accessCode" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
-                Text="{Binding Path=AccessCode, Mode=TwoWay}" Margin="40,0,0,0" Foreground="DarkGreen" FontSize="18"
-                   Visibility="Collapsed"/>
-        <TextBlock x:Name="validUpdateInfo" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
-                Text="Email Updated" Margin="100,0,0,0" Foreground="DarkGreen"
-                   Visibility="Collapsed"/>
-
-        <Button x:Name="submitButton" Content="{Binding Path=SubmitButtonContent, Mode=TwoWay}" Grid.Column="3" Grid.Row="7" Grid.ColumnSpan="3"
-                HorizontalAlignment="Center" MinWidth="80" MaxHeight="30" Click="submitButton_Click"/>
-        <DockPanel x:Name="navMenu" Grid.Column="0" Grid.Row="0" Grid.RowSpan="10" Grid.ColumnSpan="2">
-            <Menu DockPanel.Dock="Left" Padding="0,65" Background="WhiteSmoke" >
-                <MenuItem x:Name="add" Header="_Add Teacher" Margin="2,10" FontSize="14" Click="add_Click"/>
-                <MenuItem x:Name="remove" Header="_Remove Teacher" Margin="2,10" FontSize="14" Click="remove_Click"/>
-                <MenuItem x:Name="lookup" Header="_Code Lookup" Margin="2,10" FontSize="14" Click="lookup_Click"/>
-                <MenuItem x:Name="edit" Header="_Edit Account" FontSize="14" Margin="2,10">
-                    <MenuItem x:Name="editEmail" Header="Email" FontSize="14" Click="editEmail_Click" Margin="0,0,0.333,0"/>
-                    <MenuItem x:Name="editPassword" Header="Password" FontSize="14" Click="editPassword_Click"/>
-                </MenuItem>
-            </Menu>
+        <DockPanel x:Name="navMenu" Grid.Column="0" Grid.Row="0" Grid.RowSpan="6"
+                   MaxWidth="200" Height="650">
+            <Border BorderBrush="Black" BorderThickness="2">
+                <Menu DockPanel.Dock="Left" Padding="20,170">
+                    <MenuItem x:Name="add" Header="_Add Teacher" Margin="10,15" FontSize="18" Click="add_Click"/>
+                    <MenuItem x:Name="remove" Header="_Remove Teacher" Margin="10,15" FontSize="18" Click="remove_Click"/>
+                    <MenuItem x:Name="lookup" Header="_Code Lookup" Margin="10,15" FontSize="18" Click="lookup_Click"/>
+                    <MenuItem x:Name="edit" Header="_Edit Account" FontSize="18" Margin="10,15">
+                        <MenuItem x:Name="editEmail" Header="Email" FontSize="14" Click="editEmail_Click" Padding="0,0,0.333,0"/>
+                        <MenuItem x:Name="editPassword" Header="Password" FontSize="14" Click="editPassword_Click"/>
+                    </MenuItem>
+                </Menu>
+            </Border>
         </DockPanel>
-
-        <Button x:Name="a_newAccountButton" Grid.Column="5" Grid.Row="9" Grid.ColumnSpan="3" 
-                Content="Add Account" HorizontalAlignment="Right" MaxWidth="175"
-                Margin="3" Click="newAccountButton_Click"/>
+        <Button x:Name="a_newAccountButton" Grid.Column="3" Grid.Row="2" Grid.ColumnSpan="2" 
+                Content="Add Account" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="120" Height="40"
+                Margin="10,20,10,10" Click="newAccountButton_Click"/>
     </Grid>
 </UserControl>
