--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ChangePassword.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
         Height="350" Width="525">
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -28,34 +28,36 @@
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" 
-                   Margin="0,0,10,10" FontSize="36" Text="Change Password" />
+        <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="7">
+            <TextBlock Margin="0,30,0,20" FontSize="42" Text="Change Password"
+                FontStyle="Italic" TextAlignment="Center"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="2"
-                    Margin="5" TextAlignment="Right" Padding="5" Text="New Password:" />
-        <PasswordBox x:Name="newPasswordText" Grid.Column="2" Grid.Row="2"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="38" VerticalAlignment="Bottom" 
+            <StackPanel Orientation="Horizontal" Margin="40,0,0,0">
+                <TextBlock TextAlignment="Right" Padding="5" FontSize="18" Text="New Password:" />
+                <PasswordBox x:Name="newPasswordText" Width="270" 
                  PasswordChanged="newPasswordText_PasswordChanged" MaxLength="20"/>
+            </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="3"
-                   TextAlignment="Right" Padding="5" Text="Reenter Password:" />
-        <PasswordBox x:Name="reenterPasswordText" Grid.Column="2" Grid.Row="3" 
-                     PasswordChanged="reenterPasswordText_PasswordChanged"
-                     Padding="5" Width="250" MaxLength="20"/>
+            <StackPanel Orientation="Horizontal" Margin="10,10,0,20">
+                <TextBlock TextAlignment="Right" Padding="5" FontSize="18" 
+                        Text="Reenter Password:" />
+                <PasswordBox x:Name="reenterPasswordText" PasswordChanged="reenterPasswordText_PasswordChanged"
+                     Padding="5" Width="270" MaxLength="20"/>
+            </StackPanel>
 
-        <TextBlock x:Name="invalidPasswordText" Grid.Column="2" Grid.Row="4" Text="Invalid Password"
-                   Foreground="IndianRed" Visibility="Hidden" />
-        <TextBlock x:Name="unmatchedPasswordText" Grid.Column="2" Grid.Row="4" Text="Passwords Don't Match"
-                   Foreground="IndianRed" Visibility="Hidden" />
+            <TextBlock x:Name="invalidPasswordText" Text="Invalid Password"
+                   Foreground="IndianRed" Visibility="Collapsed" TextAlignment="Center" />
+            <TextBlock x:Name="unmatchedPasswordText" Text="Passwords Don't Match"
+                   Foreground="IndianRed" Visibility="Collapsed" TextAlignment="Center"/>
 
-        <StackPanel Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5" 
-                    Orientation="Horizontal" Margin="0, 10">
-            <Button x:Name="submitButton"
+            <StackPanel Orientation="Horizontal" Margin="0, 20" HorizontalAlignment="Center">
+                <Button x:Name="submitButton"
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
-            <Button x:Name="cancelButton" 
-                Width="150" Margin="10" Content="{ Binding Path=ReturnPage, Mode=TwoWay }" 
+                <Button x:Name="cancelButton" 
+                Width="150" Margin="10" Content="Cancel" 
                 Click="cancelButton_Click" />
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
