--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/CreateAccount.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
         Height="400" Width="525">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,49 +22,49 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"
-                   FontSize="36" Text="Create New Account" />
+        <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="7">
+            <TextBlock FontSize="42" Text="Create New Account" TextAlignment="Center" Margin="0,20,0,0" FontStyle="Italic"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="2"
-                    Margin="2.5" TextAlignment="Right" Padding="5" Text="Email:" />
-        <TextBox x:Name="newEmailText" Grid.Column="2" Grid.Row="2"
-                 Margin="2.5, 5, 2.5, 2.5" Width="250" TextChanged="newEmailText_TextChanged"
-                 Text="{ Binding Path=email, Mode=TwoWay }"/>
+            <StackPanel Orientation="Horizontal" Margin="98, 10, 0, 0">
+                <TextBlock TextAlignment="Right" Padding="5" Text="Email:"/>
+                <TextBox x:Name="newEmailText" Width="270" TextChanged="newEmailText_TextChanged" 
+                     Text="{ Binding Path=email, Mode=TwoWay }"/>
+            </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="3"
-                   Margin="2.5" TextAlignment="Right" Padding="5" Text="Password:" />
-        <PasswordBox x:Name="newPasswordText" Grid.Column="2" Grid.Row="3"
-                 Margin="2.5" Padding="5" Width="250" PasswordChanged="newPasswordText_PasswordChanged"
-                     MaxLength="20"/>
+            <StackPanel Orientation="Horizontal" Margin="68, 10, 0, 0">
+                <TextBlock TextAlignment="Right" Padding="5" Text="Password:" />
+                <PasswordBox x:Name="newPasswordText" Padding="5" Width="270" 
+                             PasswordChanged="newPasswordText_PasswordChanged" MaxLength="20"/>
+            </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="4"
-                   Margin="2.5" TextAlignment="Right" Padding="5" Text="Reenter Password:" />
-        <PasswordBox x:Name="reenterPasswordText" Grid.Column="2" Grid.Row="4"
-                 Margin="2.5" Padding="5" Width="250" PasswordChanged="reenterPasswordText_PasswordChanged"
-                     MaxLength="20"/>
+            <StackPanel Orientation="Horizontal" Margin="2,10, 0, 5">
+                <TextBlock TextAlignment="Right" Padding="5" Text="Reenter Password:" />
+                <PasswordBox x:Name="reenterPasswordText" Padding="5" Width="270" 
+                         PasswordChanged="reenterPasswordText_PasswordChanged" MaxLength="20"/>
+            </StackPanel>
 
-        <TextBlock x:Name="invalidEmailText" Grid.Column="2" Grid.Row="5" Text="Invalid Email Address"
-                   Foreground="IndianRed" Visibility="Hidden" />
-        <TextBlock x:Name="duplicateEmailText" Grid.Column="2" Grid.Row="5" Text="Email Address Already In Use"
-                   Foreground="IndianRed" Visibility="Hidden" />
-        <TextBlock x:Name="invalidPasswordText" Grid.Column="2" Grid.Row="6" Text="Invalid Password"
-                   Foreground="IndianRed" Visibility="Hidden" />
-        <TextBlock x:Name="unmatchingPasswordText" Grid.Column="2" Grid.Row="6" Text="Passwords Don't Match"
-                   Foreground="IndianRed" Visibility="Hidden" />
-        
-        <StackPanel Grid.Column="1" Grid.Row="7" Grid.ColumnSpan="5" 
-                    Orientation="Horizontal" Margin="0, 10">
-            <Button x:Name="createButton"
+            <TextBlock x:Name="invalidEmailText" Text="Invalid Email Address"
+                   Foreground="IndianRed" Visibility="Collapsed" Margin="155,0,0,0"/>
+            <TextBlock x:Name="duplicateEmailText" Text="Email Address Already In Use"
+                   Foreground="IndianRed" Visibility="Collapsed" Margin="155,0,0,0"/>
+            <TextBlock x:Name="invalidPasswordText" Text="Invalid Password"
+                   Foreground="IndianRed" Visibility="Collapsed" Margin="155,0,0,0" />
+            <TextBlock x:Name="unmatchingPasswordText" Text="Passwords Don't Match"
+                   Foreground="IndianRed" Visibility="Collapsed" Margin="155,0,0,0"/>
+
+            <StackPanel Orientation="Horizontal" Margin="0, 5" HorizontalAlignment="Center">
+                <Button x:Name="createButton"
                 Width="150" Margin="10" Content="Create Account" 
                 Click="createButton_Click" />
-            <Button x:Name="cancelAccountButton" 
+                <Button x:Name="cancelAccountButton" 
                 Width="150" Margin="10" Content="Cancel" 
                 Click="cancelAccountButton_Click" />
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
