--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/DeleteTeacherVerify.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/DeleteTeacherVerify.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d"
+        mc:Ignorable="d" FontSize="14" Background="#00699b" Foreground="GhostWhite"
         Title="Confirm Delete Teacher" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     
     <Grid Margin="15">
