--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListChildren.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ListChildren.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ListStudents" 
+﻿<UserControl x:Class="SchoolToHomeBehaviorTracking_Client.ListChildren"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:src="clr-namespace:SchoolToHomeBehaviorTracking_Client"
              xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-             mc:Ignorable="d" Background="LightGray" FontSize="18"
-             d:DesignHeight="550" d:DesignWidth="400">
+             mc:Ignorable="d" 
+         d:DesignHeight="550" d:DesignWidth="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -32,14 +31,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8"
-                   Text="Select a student from list" FontSize="24" Foreground="#47687c"
-                   HorizontalAlignment="Center" Margin="-10,5,5,5"/>
-        <ScrollViewer Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="8" Grid.RowSpan="8"
+        <ScrollViewer Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="8" Grid.RowSpan="8"
                       VerticalScrollBarVisibility="Auto" MaxHeight="350">
-            <ListBox x:Name="studentList" ItemsSource="{Binding StudentNames}"
-                 BorderThickness="2" Margin="10,10" MouseUp="TextBlock_MouseUp" 
-                     Background="#9dd4c5">
+            <ListBox x:Name="childrenList" Width="350"  ItemsSource="{Binding ChildrenNames}"
+                 BorderThickness="0" Margin="0,5,0,10" MouseUp="TextBlock_MouseUp">
             </ListBox>
         </ScrollViewer>
     </Grid>
