--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/Login.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-        mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+        mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
         Height="350" Width="725">
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -27,38 +27,40 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
         </Grid.RowDefinitions>
+     
+            <StackPanel Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="7">
+                <TextBlock Margin="0,15,10,20" Text="School-To-Home Login" FontSize="50" FontStyle="Italic"
+                   HorizontalAlignment="Center"/>
 
-        <TextBlock Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" 
-                   Margin="0,0,10,10" FontSize="36" Text="Login" />
+                <StackPanel Orientation="Horizontal" Margin="130,5">
+                    <TextBlock TextAlignment="Right" Padding="5" FontSize="24" Text="Email:" />
+                    <TextBox x:Name="emailText" Margin="5" Width="270" TextChanged="emailText_TextChanged"
+                    Text="{ Binding Path=email, Mode=TwoWay }"/>
+                </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="2"
-                    Margin="5" TextAlignment="Right" Padding="5" Text="Email:" />
-        <TextBox x:Name="emailText" Grid.Column="2" Grid.Row="2"
-                 Margin="4.667,0,5.333,4.667" Width="250" Height="29" TextChanged="emailText_TextChanged"
-                 Text="{ Binding Path=email, Mode=TwoWay }"/>
+                <StackPanel Orientation="Horizontal" Margin="85, 5, 5, 10">
+                    <TextBlock TextAlignment="Right" Padding="5" FontSize="24" Text="Password:" />
+                    <PasswordBox x:Name="passwordText" PasswordChanged="passwordText_PasswordChanged"
+                 Width="270" MaxLength="20" Margin="2,5"/>
+                </StackPanel>
 
-        <TextBlock Grid.Column="1" Grid.Row="3"
-                   TextAlignment="Right" Padding="5" Text="Password:" />
-        <PasswordBox x:Name="passwordText" Grid.Column="2" Grid.Row="3" PasswordChanged="passwordText_PasswordChanged"
-                 Padding="5" Width="250" MaxLength="20" />
-
-        <TextBlock x:Name="invalidText" Grid.Column="2" Grid.Row="4" Text="Invalid Credentials"
+                <TextBlock x:Name="invalidText" Text="Invalid Credentials" TextAlignment="Center"
                    Foreground="IndianRed" Visibility="Hidden" />
 
-        <StackPanel Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="5" 
-                    Orientation="Horizontal" Margin="0, 10">
-            <Button x:Name="submitButton"
+                <StackPanel Margin="0, 5" Orientation="Horizontal">
+                    <Button x:Name="submitButton"
                 Width="150" Margin="10" Content="Submit" 
                 Click="submitButton_Click" />
-            <Button x:Name="cancelButton" 
+                    <Button x:Name="cancelButton" 
                 Width="150" Margin="10" Content="Exit" 
                 Click="cancelButton_Click" />
-            <Button x:Name="forgotPasswordButton" 
+                    <Button x:Name="forgotPasswordButton" 
                 Width="150" Margin="10" Content="Forgot Password" 
                 Click="forgotPasswordButton_Click" />
-            <Button x:Name="createAccountButton" 
+                    <Button x:Name="createAccountButton" 
                 Width="150" Margin="10" Content="New Account" 
                 Click="createAccountButton_Click" />
-        </StackPanel>
+                </StackPanel>
+            </StackPanel>
     </Grid>
 </UserControl>
