--- a/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ParentDash.xaml
+++ b/SchoolToHomeBehaviorTracking/SchoolToHomeBehaviorTracking/Client/ParentDash.xaml
@@ -4,10 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SchoolToHomeBehaviorTracking_Client"
-             mc:Ignorable="d" FontSize="12" FontFamily="Lucida Sans Unicode"
+             mc:Ignorable="d" FontSize="16" FontFamily="Lucida Sans Unicode"
              d:DesignHeight="550" d:DesignWidth="600">
+
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -30,15 +32,88 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button x:Name="logoutButton" Grid.Column="5" Grid.Row= "0" Grid.ColumnSpan="2" 
-                Content="Logout" HorizontalAlignment="Right" Margin="5,1" Click="logoutButton_Click"/>
+        <Button x:Name="logoutButton" Grid.Column="6" Grid.Row= "0" Grid.ColumnSpan="2" 
+                Content="Logout" HorizontalAlignment="Right" Margin="5,1" MaxHeight="30" MinWidth="60" Click="logoutButton_Click"/>
 
-        <TextBlock x:Name="userNameText" Grid.Column="4" Grid.Row="1" Grid.ColumnSpan="3"
-                       Text="Welcome " HorizontalAlignment="Right" Margin="3, 0"/>
-        <TextBlock x:Name="loginText" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3"
-                       Text="Last Login: " HorizontalAlignment="Right" Margin="3, 0"/>
-        
-        <Button x:Name="p_newAccountButton" Grid.Column="3" Grid.Row="9" Grid.ColumnSpan="4" 
+        <TextBlock x:Name="userNameText" Grid.Column="5" Grid.Row="1" Grid.ColumnSpan="3" 
+                   Text="{Binding Path=UserName, Mode=TwoWay}" HorizontalAlignment="Right" Margin="3, 0"/>
+
+        <TextBlock x:Name="loginText" Grid.Column="5" Grid.Row="2" Grid.ColumnSpan="4"
+                Text="{Binding Path=LastAccess, Mode=TwoWay}" HorizontalAlignment="Right" Margin="3,0"/>
+
+        <TextBlock x:Name="menuHeaderText" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="2" 
+                   Text="{Binding Path=MenuHeader, Mode=TwoWay}" FontSize="18" Margin="10,0"/>
+
+        <StackPanel x:Name="homeTrackingForms" Visibility="Collapsed" 
+                   Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:ParentForms x:Name="homeTrackingFormsUC"></local:ParentForms>
+        </StackPanel>
+
+        <StackPanel x:Name="listParentForms" Visibility="Collapsed"
+            Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:ListParentForms x:Name="listParentFormsUC"></local:ListParentForms>
+        </StackPanel>
+
+        <StackPanel x:Name="teacherSubmitForm" Visibility="Collapsed" 
+                   Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:DisplayTeacherForm x:Name="teacherSubmitFormUC"></local:DisplayTeacherForm>
+        </StackPanel>
+
+        <StackPanel x:Name="parentSubmitForm" Visibility="Collapsed" 
+                   Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:DisplayParentForm x:Name="parentSubmitFormUC"></local:DisplayParentForm>
+        </StackPanel>
+
+        <StackPanel x:Name="listChildren" Visibility="Collapsed" 
+                   Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:ListChildren x:Name="listChildrenUC"></local:ListChildren>
+        </StackPanel>
+
+        <StackPanel x:Name="parentFormArchieve" Visibility="Collapsed" 
+                   Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="6" Grid.RowSpan="6">
+            <local:MuliColumnFormsList x:Name="parentFormArchieveUC"></local:MuliColumnFormsList>
+        </StackPanel>
+
+        <StackPanel x:Name="Panel1" Visibility="Collapsed" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="5" Orientation="Horizontal">
+            <TextBlock x:Name="text1Text" HorizontalAlignment="Right"
+                Text="{Binding Path=Text1Text, Mode=TwoWay}" Margin="10,0,0,0"/>
+            <TextBox x:Name="textBox1Text" HorizontalAlignment="Left" MinWidth="200" MaxHeight="20" 
+                     VerticalAlignment="Top" Text="{Binding Path=TextBox1Text, Mode=TwoWay}"/>
+        </StackPanel>
+
+        <StackPanel x:Name="Panel2" Visibility="Collapsed" Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="5" Orientation="Horizontal">
+            <TextBlock x:Name="text2Text" HorizontalAlignment="Right"
+                 Text="{Binding Path=Text2Text, Mode=TwoWay}" Margin="10,0,0,0"/>
+            <TextBox x:Name="textBox2Text" HorizontalAlignment="Left" MinWidth="200" MaxHeight="20" 
+                     VerticalAlignment="Top" Text="{Binding Path=TextBox2Text, Mode=TwoWay}"/>
+        </StackPanel>
+
+        <TextBlock x:Name="invalidEntryMsg" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
+                Text="{Binding Path=ErrorMsg, Mode=TwoWay}" Margin="100,0,0,0" Foreground="IndianRed"
+                   Visibility="Collapsed"/>
+
+        <TextBlock x:Name="successMsg" Grid.Column="2" Grid.Row="6" Grid.ColumnSpan="6" 
+                Text="{Binding Path=SuccessMsg}" Margin="100,0,0,0" Foreground="DarkGreen"
+                   Visibility="Collapsed"/>
+
+        <Button x:Name="submitButton" Visibility="Collapsed" Content="{Binding Path=SubmitButtonContent, Mode=TwoWay}" Grid.Column="3" Grid.Row="7" Grid.ColumnSpan="3"
+                HorizontalAlignment="Center" MinWidth="80" MaxHeight="30" Click="submitButton_Click"/>
+
+        <DockPanel x:Name="navMenu" Grid.Column="0" Grid.Row="0" Grid.RowSpan="10" Grid.ColumnSpan="2">
+            <Menu DockPanel.Dock="Left" Padding="0,150" MaxWidth="200">
+                <MenuItem x:Name="trackChild" Header="_Track Child" Margin="2,10" FontSize="14" Click="trackChild_Click"/>
+                <MenuItem x:Name="teacherForm" Header="_View Progress Report" Margin="2,10" FontSize="14" Click="teacherForm_Click"/>
+                <MenuItem x:Name="formHistory" Header="_Form Archieve" Margin="2,10" FontSize="14" Click="formHistory_Click"/>
+                <MenuItem x:Name="graphs" Header="_Graphs" Margin="2,10" MinWidth="100" FontSize="14" Click="graphs_Click"/>
+                <MenuItem x:Name="manageAccount" Header="_Edit Account" FontSize="14" Margin="2,10">
+                    <MenuItem x:Name="editUserName" Header="Username" FontSize="14" Click="editUserName_Click" Margin="0,0,0.333,0"/>
+                    <MenuItem x:Name="editEmail" Header="Email" FontSize="14" Click="editEmail_Click" Margin="0,0,0.333,0"/>
+                    <MenuItem x:Name="editPassword" Header="Password" FontSize="14" Click="editPassword_Click"/>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
+
+        <Button x:Name="p_newAccountButton" Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="4" 
                 Content="Add Student/Account" HorizontalAlignment="Right" 
                 Margin="3" Click="newAccountButton_Click"/>
     </Grid>
